	   different versions of mktemp, thanks anarcat
    ninjahelper changes
	 . Recursively ignore subdirs in /etc/backup.d (Closes: #361102)
	 . Fix configdirectory error that forced you to use /etc/backup.d, thanks anarcat
	 . When determining which backup actions to list, find now follows
           symlinks for $configdirectory
	dup.helper:
	 . Fix: signing was enabled with symmetric encryption.
    changed cron permissions to 644
    minor documentation fixes
    improved RPM build process allowing 'make rpm-package' and 'make
    srpm-package' targets, also fixes permissions on man directories, 
    cleans up RPM-related files during distclean, and adds default
    EDITOR for "autogen.sh -f" if none is set. (thanks Robert Napier)

version 0.9.3 -- February 1st, 2006
    autotools fixes
    backupninja changes
        backupninja.conf
         . added (commented out) the various default paths to
           programs such as PGSQLDUMP, so that users can figure
           out more easily they can customize them
        code refactor:
	 . now uses vservers lib to initialize vservers support
    handler changes
        duplicity, mysql, pgsql, rdiff, svn, sys: start to use (at different
	   degrees) new lib/vserver functionality
        mysql:
         . fixed no user defaults file processing
	duplicity:
	 . fixed (again...) globbing in include and exclude options (Debian bug
	   #348022, follow-up to #338796)
	 . warn if vsnames or vsinclude is enabled while vservers support is
	   disabled in backupninja.conf
	 . now works when multiple vservers names are given (separated by space)
	   in vsnames config variable
        rdiff
	 . fixed globbing bug in include, exclude and vsinclude options
	 . it's now possible to choose exactly which vservers should be
	   backed-up, as it already was with duplicity handler, with the
	   "vsnames" configuration setting
    ninjahelper changes
        rdiff.helper:
         . fixed errors in create remote dir